# my_graphics_demos

./: .gitmodules  CMakeLists.txt  README.md
Cube/: CMakeLists.txt
Cube/sources/: main.cpp  shaders.hpp
Monkey/: CMakeLists.txt  README.md
Monkey/sources/: main.cpp  shaders.hpp
Triangle/: CMakeLists.txt  README.md  main.cpp  shaders.hpp
libraries/glad/: CMakeLists.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
libraries/imgui/: CMakeLists.txt
resources/Monkey/: monke.gltf
resources/models/: monke.gltf
utils/: create_shader.hpp
utils/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
utils/Shader/: CMakeLists.txt  Shader.cpp  Shader.hpp
utils/VertexBuffer/: CMakeLists.txt  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
utils/Window/: CMakeLists.txt  Window.hpp
utils/Window/detail/: GlfwWindow.cpp  GlfwWindow.hpp
